--- a/PurpleMoon3/PurpleMoon3.csproj
+++ b/PurpleMoon3/PurpleMoon3.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
-        <RuntimeIdentifier>cosmos</RuntimeIdentifier>
+        <TargetFramework>net5.0</TargetFramework>
         <SelfContained>True</SelfContained>
         <BinFormat>ELF</BinFormat>
         <StackCorruptionDetectionEnabled>True</StackCorruptionDetectionEnabled>
@@ -11,6 +10,7 @@
         <DebugEnabled>False</DebugEnabled>
         <DebugMode>Source</DebugMode>
         <IgnoreDebugStubAttribute>False</IgnoreDebugStubAttribute>
+        <ISOFile>bin\Debug\net5.0\PurpleMoon3.iso</ISOFile>
     </PropertyGroup>
 
     <PropertyGroup>
